--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+
     <div id="main" class="main">
         <div class="load_questions" id="load_questions">
             <div class="description">Загрузите тест</div>
@@ -23,37 +24,61 @@
                 odio maiores maxime exercitationem deleniti!
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut voluptates ex doloremque at veritatis
                 blanditiis
-                ad dolores, tempore delectus optio assumenda cupiditate sunt reprehenderit laboriosam ducimus sapiente,
+                ad dolores, tempore delectus optio assumenda cupiditate sunt reprehenderit laboriosam ducimus
+                sapiente,
                 harum eos! Repudiandae?
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit inventore obcaecati iste nihil quis
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit inventore obcaecati iste nihil
+                quis
                 earum
-                quod sunt officia tempore, ratione sit voluptatum neque repellat nisi nostrum ipsa fugiat debitis minus!
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit, a? Id reprehenderit minus quae quos
-                accusantium ad delectus atque, dolorem deleniti nostrum consectetur? Autem ipsam quisquam repellendus,
+                quod sunt officia tempore, ratione sit voluptatum neque repellat nisi nostrum ipsa fugiat debitis
+                minus!
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit, a? Id reprehenderit minus quae
+                quos
+                accusantium ad delectus atque, dolorem deleniti nostrum consectetur? Autem ipsam quisquam
+                repellendus,
                 alias
                 perspiciatis quasi.
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, animi maiores. Perspiciatis temporibus
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, animi maiores. Perspiciatis
+                temporibus
                 expedita recusandae nesciunt vitae, minima non quisquam autem mollitia odit at incidunt iure. Id
                 accusamus
                 aspernatur facilis!
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse itaque natus velit, ut fugit doloribus
                 quis
-                illum maiores dolorem repellendus aliquam inventore fugiat excepturi cupiditate ullam, dolorum, ducimus
+                illum maiores dolorem repellendus aliquam inventore fugiat excepturi cupiditate ullam, dolorum,
+                ducimus
                 aliquid assumenda!
 
             </div>
             <div class="user_answer">
                 <input type="text" class="write">
+                <div class="check">
+                    <input name="1" type="radio" value="1">
+                    <div>
+                        11111111111111111111111111111111111
+                    </div>
+                    <input name="1" type="radio" value="2">
+                    <div>2</div>
+                    <input name="1" type="radio" value="3">
+                    <div>3</div>
+                    <input name="2" type="checkbox" value="1">
+                    <div>1</div>
+                    <input name="2" type="checkbox" value="2">
+                    <div>2</div>
+                    <input name="2" type="checkbox" value="3">
+                    <div>3</div>
+                </div>
             </div>
             <div class="buttons_area">
-                <div><button id="button_prev">Назад</button></div>
-                <div><button id="button_next">Дальше</button></div>
+                <div><button>Назад</button></div>
+                <div><button>Дальше</button></div>
             </div>
         </div>
         <div class="block_teleport">
 
         </div>
     </div>
+
 </body>
 
 </html>
