--- a/index.html
+++ b/index.html
@@ -75,7 +75,15 @@
             </div>
         </div>
         <div class="block_teleport">
-
+            <div class="block_teleport_head">
+                <div>Time</div>
+                <div>Задания</div>
+            </div>
+            <div class="block_teleport_body">
+                <div>1</div>
+                <div>1</div>
+                <div>1</div>
+            </div>
         </div>
     </div>
 
