--- a/index.html
+++ b/index.html
@@ -14,77 +14,9 @@
     <div id="main" class="main">
         <div class="load_questions" id="load_questions">
             <div class="description">Загрузите тест</div>
-            <input type="file" , accept=".txt" id="file">
+            <input type="file" , accept=".txt" class="file" id="file">
         </div>
-        <div class="block_questions" id="block_questions">
-            <div class="question">Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta nesciunt, ullam
-                deserunt
-                voluptatum maiores expedita nulla quo facere adipisci corrupti tempora facilis aliquam accusamus?
-                Dolores
-                odio maiores maxime exercitationem deleniti!
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut voluptates ex doloremque at veritatis
-                blanditiis
-                ad dolores, tempore delectus optio assumenda cupiditate sunt reprehenderit laboriosam ducimus
-                sapiente,
-                harum eos! Repudiandae?
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit inventore obcaecati iste nihil
-                quis
-                earum
-                quod sunt officia tempore, ratione sit voluptatum neque repellat nisi nostrum ipsa fugiat debitis
-                minus!
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit, a? Id reprehenderit minus quae
-                quos
-                accusantium ad delectus atque, dolorem deleniti nostrum consectetur? Autem ipsam quisquam
-                repellendus,
-                alias
-                perspiciatis quasi.
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, animi maiores. Perspiciatis
-                temporibus
-                expedita recusandae nesciunt vitae, minima non quisquam autem mollitia odit at incidunt iure. Id
-                accusamus
-                aspernatur facilis!
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse itaque natus velit, ut fugit doloribus
-                quis
-                illum maiores dolorem repellendus aliquam inventore fugiat excepturi cupiditate ullam, dolorum,
-                ducimus
-                aliquid assumenda!
-
-            </div>
-            <div class="user_answer">
-                <input type="text" class="write">
-                <div class="check">
-                    <input name="1" type="radio" value="1">
-                    <div>
-                        11111111111111111111111111111111111
-                    </div>
-                    <input name="1" type="radio" value="2">
-                    <div>2</div>
-                    <input name="1" type="radio" value="3">
-                    <div>3</div>
-                    <input name="2" type="checkbox" value="1">
-                    <div>1</div>
-                    <input name="2" type="checkbox" value="2">
-                    <div>2</div>
-                    <input name="2" type="checkbox" value="3">
-                    <div>3</div>
-                </div>
-            </div>
-            <div class="buttons_area">
-                <div><button>Назад</button></div>
-                <div><button>Дальше</button></div>
-            </div>
-        </div>
-        <div class="block_teleport">
-            <div class="block_teleport_head">
-                <div>Time</div>
-                <div>Задания</div>
-            </div>
-            <div class="block_teleport_body">
-                <div>1</div>
-                <div>1</div>
-                <div>1</div>
-            </div>
-        </div>
+       
     </div>
 
 </body>
